RESOLVED FIXED194797
REGRESSION (PSON): Can't access optumbank.com from myuhc.com
https://bugs.webkit.org/show_bug.cgi?id=194797
Summary REGRESSION (PSON): Can't access optumbank.com from myuhc.com
Chris Dumez
Reported 2019-02-18 15:38:21 PST
Can't access optumbank.com from myuhc.com when PSON is enabled.
Attachments
Patch (29.64 KB, patch)
2019-02-18 16:17 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-02-18 15:38:36 PST
Chris Dumez
Comment 2 2019-02-18 16:17:22 PST
Geoffrey Garen
Comment 3 2019-02-18 16:52:58 PST
Comment on attachment 362355 [details] Patch r=me
WebKit Commit Bot
Comment 4 2019-02-18 18:29:07 PST
Comment on attachment 362355 [details] Patch Clearing flags on attachment: 362355 Committed r241752: <https://trac.webkit.org/changeset/241752>
WebKit Commit Bot
Comment 5 2019-02-18 18:29:09 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.